# effective-adventure

./: .gitignore  README.md  pyproject.toml
notebooks/: 37classes.ipynb  axel.ipynb  tobias_notebook.ipynb
