[tool.poetry]
name = "effective-adventure"
version = "0.1.0"
description = ""
authors = ["erseux <ERSEUSAUGUST@GMAIL.COM>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.0"
torchvision = "^0.15.1"
numpy = "^1.24.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
